--- a/app/views/monsters/show.html.erb
+++ b/app/views/monsters/show.html.erb
@@ -1,1 +1,33 @@
-<%# Update me %><%= @monster.inspect %>
+<h1> <%= @monster.name %> </h1>
+
+<% tweets = Tweet.where(monster_id: @monster.id)%>
+<hr>
+<div class="container text-center">
+    <div class="row">
+
+        <div class="col text-center">
+            <h5>Descripcion</h5>
+            <hr class="w-50">
+            <p> <%= @monster.description %></p>
+            <button class="btn bg-danger text-white rounded-1 p-1" style="font-size:14px;font-family:'Verdana'">
+                        <%= link_to "Destroy", @monster, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></button>
+        </div>
+
+        <div class="col text-center">
+            <div class="d-flex flex-column align-items-center">
+                <h5 >Tweets</h5>
+                <%-tweets.each do |tweet|-%>
+                    <div class="border border-data rounded-1 w-75 p-1" style="margin-top:10px">
+                        <tr>
+                            <td><%= tweet.content %></td>
+                            <td><%= tweet.updated_at%></td>
+                        </tr>
+                    </div>
+                <br>
+                <%-end-%>
+            </div>
+        </div>
+    </div>
+</div>
+
+
