--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,3 +1,4 @@
+<%= link_to tweet do %>
 <div class="row border-top py-3 px-3">
   <div class="col-sm-2 gx-0 text-end">
     <%# https://xsgames.co/randomusers/ %>
@@ -28,3 +29,4 @@
     <% end %>
   </div>
 </div>
+<% end %>
