--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -1,1 +1,30 @@
-<%# Update me %><%= @monsters.inspect %>
+<h1 class="h1">Monstruos</h1>
+<div class="d-flex justify-content-end">
+    <button class="btn"><%= link_to "Agregar monstruo", "/monsters/new"%></button>
+</div>
+
+<%t = Tweet.all%>
+<div class="table-responsive">
+    <table class="table">
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Reconocimientos</th>
+            <th colspan="3"></th>
+        </tr>
+        <%-@monsters.each do |m|-%>
+            <tr>
+                <td><%= m.id %></td>
+                <td><button class="btn" style="font-size:1em"><%= link_to m.name, m%></button></td>
+                <td>
+                    <% if t.where(monster_id:m.id).count > 1%>
+                        <span class="badge bg-info text-wrap" style="font-family:'Verdana'">Twittero destacado</span>
+                        <%end%>
+                </td>
+                <td>
+                        <%= link_to "Eliminar", m, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"btn bg-danger text-white rounded-1 p-1", style:"font-family:'Verdana'; font-size:0.85em" %>
+                </td>
+            </tr>
+        <%end%>
+    </table>
+</div>
