--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,3 +1,3 @@
 <h2 class="py-2 mb-0">Nuevo Tweet</h2>
 
-<%= render "form", tweet: @tweet %>
+<%= render "form", tweet: @tweet, monster: @monster %>
