borde boton agregar monsruo

--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="h1">Monstruos</h1>
 <div class="d-flex justify-content-end">
-    <button class="btn"><%= link_to "Agregar monstruo", "/monsters/new"%></button>
+    <button class="btn border boder-data border-2"><%= link_to "Agregar monstruo", "/monsters/new"%></button>
 </div>
 
 <%t = Tweet.all%>
